--- a/platform/styles.css
+++ b/platform/styles.css
@@ -17,12 +17,12 @@ html, body {
 /* Logo container styling */
 .logo-container {
     position: absolute;
-    z-index: 1000;
+    /* z-index: 1000; */
 }
 
 /* Logo styling */
 .logo {
-    width: 400px;
+    width: 300px;
     height: auto;
     opacity: 1.0;
     transition: opacity 0.3s ease, transform 0.3s ease;
@@ -34,10 +34,10 @@ html, body {
 }
 
 /* Position individual logos */
-#logo1 { top: 200px; left: 1100px; }
-#logo2 { top: 20px; right: 20px; opacity: 0.8; transform: rotate(10deg); }
-#logo3 { bottom: 20px; left: 20px; opacity: 0.9; width: 120px; }
-#logo4 { bottom: 20px; right: 20px; opacity: 0.9; }
+#logo1 { top: 1px; left: 50%; transform: translateX(-50%);}
+#logo2 { top: 1px; right: 20px; opacity: 0.8; transform: rotate(10deg); }
+#logo3 { bottom: 20px; left: 20px; opacity: 1.0; width: 120px; }
+#logo4 { bottom: 20px; right: 20px; opacity: 1.0; }
 
 /* Container styling */
 .container {
